--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
             <div class="title-bloc2">La Pension</div>
             <div class="pension">
               <div class="repro">
-                <div class="sprite"><img src="./img/pokemon/sprite/Oeuf.png"></div>
+                <div class="sprite"><img src="./img/pokemon/sprite/EcayonS.png"></div>
                 <div class="repro-infos">
-                  Pokémon lvl xx (x/x) → lvl xx (x/x)<br/><br/>
-                  Dresseur<br/><br/>
-                  Prix payé<br/>
+                  Ecayon S lvl 15 (0/1) → lvl 50 (0/4)<br/><br/>
+                  Willi Toyotomi<br/><br/>
+                  Prix payé : 1900 p$<br/>
                 </div>
               </div>
               <div class="repro">
-                <div class="sprite"><img src="./img/pokemon/sprite/Oeuf.png"></div>
+                <div class="sprite"><img src="./img/pokemon/sprite/Tentacool.png"></div>
                 <div class="repro-infos">
-                  Pokémon lvl xx (x/x) → lvl xx (x/x)<br/><br/>
-                  Dresseur<br/><br/>
-                  Prix payé<br/>
+                  Tentacool lvl 18 (0/1) → lvl 50 (0/4)<br/><br/>
+                  Willi Toyotomi<br/><br/>
+                  Prix payé : 1840 p$<br/>
                 </div>
               </div>
               <div class="repro">
